force-app/main/default/objects/ShippingDivison__c/ShippingDivison__c.object-meta.xml
<CustomObject>
    
    <label>Divisão de Remessa</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Divisão de Remessa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Divisões de Remessa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>