force-app/main/default/objects/ShippingDivison__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>Data de Entrega</label>
    <type>Date</type>
</CustomField>