force-app/main/default/objects/ShippingDivison__c/fields/SapNumber__c.field-meta.xml
<CustomField>
    <fullName>SapNumber__c</fullName>
    <label>Número Sap</label>
    <length>3</length>
    <type>Text</type>
</CustomField>