force-app/main/default/objects/ShippingDivison__c/fields/ShippingValue__c.field-meta.xml
<CustomField>
    <fullName>ShippingValue__c</fullName>
    <formula>ConfirmedQuantity__c *  OrderItem__r.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor da Remessa</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>