force-app/main/default/objects/ShippingDivison__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>OrderItem__c</columns>
    <columns>ShippingValue__c</columns>
    <columns>DeliveryDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>